[gd_scene load_steps=6 format=3 uid="uid://d4i5ukpt4mqw6"]

[ext_resource type="Script" uid="uid://e726fef5bs4k" path="res://Scripts/enemy.gd" id="1_lsx3x"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_j51ow"]
radius = 0.25
height = 1.25

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_lsx3x"]
radius = 5.0
height = 18.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b1c4r"]
size = Vector2(146, 22)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lsx3x"]
size = Vector2(12, 20)

[node name="Enemy" type="CharacterBody2D" groups=["Enemy"]]
script = ExtResource("1_lsx3x")

[node name="Mesh" type="MeshInstance2D" parent="."]
position = Vector2(-4.76837e-07, 2.38419e-06)
scale = Vector2(20, 15)
mesh = SubResource("CapsuleMesh_j51ow")

[node name="Collider" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_lsx3x")

[node name="VisionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="VisionArea"]
position = Vector2(73, -6)
shape = SubResource("RectangleShape2D_b1c4r")

[node name="GroundCheck" type="RayCast2D" parent="."]
target_position = Vector2(5, 14)

[node name="GrabArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="GrabArea"]
position = Vector2(6, 0)
shape = SubResource("RectangleShape2D_lsx3x")

[connection signal="body_entered" from="VisionArea" to="." method="_on_vision_entered"]
[connection signal="body_exited" from="VisionArea" to="." method="_on_vision_exited"]
[connection signal="body_entered" from="GrabArea" to="." method="_on_grab_area_body_entered"]
